Index.html update

--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -173,12 +173,16 @@
         </div> 
         <!-- ======= Full Screen Image  / End ========== -->
   <!--footer-->
-<div class="col-lg-12 text-center top_90 bottom_60">
-    <a class="next-link" href="Racing-Extinction.html">
-        <div class="nav-title">Next Work</div>
-        <div class="next-title">Racing Extinction</div>
-    </a>
-</div>
+
+<section>
+    <div class="col-lg-12 text-center">
+            <a class="next-link" href="Racing-Extinction.html">
+                <div class="nav-title">Next Work</div>
+                <div class="next-title">Racing Extinction</div>
+            </a>
+    </div>
+</section>
+
 <footer data-midnight="dark">
     <div class="container text-center">
       <div class="row">  
