--- a/USA-Today.html
+++ b/USA-Today.html
@@ -119,7 +119,7 @@
                                 <p>As part of USA Today's 2017 brand-refresh my team created a video graphics package to serve as a template for the newspaper's online content. As the team created these graphics we did an in-depth research and presented case studies of companies such as Vox, CNN, Vice, AJ+, my team had a great inspiration phase that led to the new branding for the online content of the brand.</p>
                             </div>
                             <div class="col-lg-6">
-                                <h2 class="subtitle bottom_30">Credits</h2>
+                                <h2 class="title bottom_30">Credits</h2>
                                 <p>Senior Art Director: Glenann Godden, 
                                     <br>Designer: Peter Verastegui, 
                                     <br>Designer: Dylan Glenn</p>
