--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -120,7 +120,7 @@
                             <p>In the film Racing Extinction, Oscar®-winner director Louie Psihoyos assembles a team of artists and activists with the intent of showing the world never-before-seen images that expose issues of endangered species and mass extinction. By the end of the film one can expect to walk out with the buzzing thought that we are the last generation with the chance to change the course of history; to make a change and drift away from extinction we have to start now, for the generations to come it would be too late to make a difference.</p>
                         </div>
                         <div class="col-lg-6">
-                            <h2 class="subtitle bottom_30">Credits</h2>
+                            <h2 class="title bottom_30">Credits</h2>
                             <p>Creative Director: Janet Daniel, 
                                 <br> Associate Creative Director: Beth Stewart, 
                                 <br> Photo Producer: Susan Wetherby, 
