Round Corner are so fun
border-radius: 0px 10px 10px 0px;

--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -134,10 +134,10 @@
 
 <div class="row white-bg">      
   <div class="col-lg-6 bottom_30">
-              <img class="image img-fluid float-left round-corners" src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
+              <img class="image img-fluid float-left right-round-corners" src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
       </div>
       <div class="col-lg-6">
-              <img class="image img-fluid float-right round-corners" src="img/works/work-6/Kids_drawing@Bioblitz.jpg" alt="Stand">
+              <img class="image img-fluid float-right left-round-corners" src="img/works/work-6/Kids_drawing@Bioblitz.jpg" alt="Stand">
       </div>
       
  </div>
@@ -174,11 +174,11 @@
    
         <div class="row white-bg">
           <div class="col-lg-6">
-            <img class="image img-fluid round-corners" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
+            <img class="image img-fluid right-round-corners" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
           </div>
 
         <div class="col-lg-6">
-            <img class="image img-fluid round-corners" src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
+            <img class="image img-fluid left-round-corners" src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
         </div>
         </div>
  
