--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -83,7 +83,7 @@
 </div>
 
 <!-- ======= Full Screen Image  / Start ========== -->
-<div data-midnight="white">
+<div data-midnight="white" class="white-bg">
     <img class="img-fluid" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif" alt="Social video styleguide">
 </div>
 <!-- ======= Full Screen Image / End ========== -->
