--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,29 +106,43 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="galaxy-bg">
+
+<section  data-midnight="dark" class="galaxy-bg-purple">
 <div class="container project-detail">  
 <div class="row lightbox-gallery">  
-  <div class="col-lg-5 col-md-12 bottom_60">
-    <div style="width:100%;height:0;padding-bottom:54%;position:relative;"><iframe src="https://giphy.com/embed/whzzWFp4j7vKE" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
-    </div>
-  </div>
-  <div class="col-lg-7 col-md-12">
+
+  <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
     <h2 class="title white-text">Why Agent J got the small gun?</h2>
-    <p class="white-text">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many companies around the galaxy.</p>
+    <p class="white-text bottom_60">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many companies around the galaxy.</p>
 </div> 
+
+<div class="col-lg-8 col-md-12 col-sm-12 cl-xs-12 image">
+  <img class="bottom_30 round-corners" src="img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png" alt="Step One">
+  </div>
 </div>
-</div>   
-  </section>   
-  
-  <section data-midnight="white" class="project-detail white">
-    <div>
-      <h3 class="text subtitle text-center">How would one fix the MIB’s user experience?</h3>
-      <p class="text project-detail text-center"> You know, bringing awarness into their way of working, wich in turns bring accoutability. How would I do that?<br> 
-        1. Mapping & streamlining their existing worklfows  2. Designing a request management system , 3. providing a killer UX/UI</p>
+</div>
+
+</div>  
+  </section>
+  <section  class="galaxy-bg-purple-gradient">
+    <div class="container project-detail">
+      <h2 class="title white-text text-center bottom_120">How would one fix the MIB’s user experience?</h2>
+              <div class="row lightbox-gallery top_120">      
+                <div class="image col-lg-4 col-md-12 col-sm-12">
+                  <img class="bottom_30" src="img/works/Galaxy/one.svg" alt="Step One">
+                  </div>
+                  <div class="image col-lg-4 col-md-12 col-sm-12">
+                    <img class="bottom_30" src="img/works/Galaxy/TWO.svg" alt="Step One">
+
+                  </div>
+                  <div class="image col-lg-4 col-md-12 col-sm-12">
+                    <img src="img/works/Galaxy/THREE.svg" alt="Step One">
+                  </div>
+
+                
+              </div>
     </div>
   </section>
-
 <!-- Three Columns - Text & Image | Start  -->
 <section  data-midnight="dark" class="dark galaxy-bg">
   <div class="container project-detail">
@@ -139,7 +153,7 @@
   </div>
     <div class="row">
       <div class="col-lg-12">
-             <h2 class="text text-center title">Mapping & streamlining their existing worklfows</h2>
+             <h2 class="text text-center title">Mapping a request</h2>
       </div>
   </div>
   </div>
@@ -150,7 +164,7 @@
               <div class="image">
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
               </div>
-              <h2 class="title bottom_30">Agent J</h2>
+              <h2 class="subtitle bottom_30">Agent J</h2>
                 <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
                 <div class="image top_30">
                   <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
@@ -160,7 +174,7 @@
               <div class="image">
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
               </div>
-                <h2 class="title bottom_30">Supervisor</h2>
+                <h2 class="subtitle bottom_30">Supervisor</h2>
                   <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If safety cost us some money so be it.</p>
                   <div class="image top_30">
                     <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
@@ -170,7 +184,7 @@
               <div class="image">
                   <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
               </div> 
-              <h2 class="title bottom_30">CFO</h2>
+              <h2 class="subtitle bottom_30">CFO</h2>
                 <p>I am the money guy, in my eyes some people in the field think every assigment is a Michael Bey movie. Everytime they go out and cost me more money than they should I got a problem. Do they think we have an infinite suply of money?, if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
                 <div class="image top_30">
                   <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
@@ -232,7 +246,7 @@
 </div>
 <div class="row">
 <div class="col-lg-12 bottom_120">
-     <h2 class="text text-center white-text title">Providing a killer UI/UX</h2>
+     <h2 class="text text-center white-text title">Providing a killer UI</h2>
 </div>
 </div>
 
@@ -354,7 +368,7 @@
                     <!-- Images -->
                     <div class="row lightbox-gallery">
                       <!-- a image -->
-                      <div class="col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4">
+                      <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2 col-sm-12">
                         <div style="width:100%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/R7m04yMaGWVeE" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
                       </div>
                   </div>
