--- a/Galaxy.html
+++ b/Galaxy.html
@@ -113,7 +113,7 @@
 
   <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
     <h2 class="title white-text">Why Agent J got the small gun?</h2>
-    <p class="white-text bottom_60">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many companies around the galaxy.</p>
+    <p class="white-text bottom_60">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many places around the galaxy.</p>
 </div> 
 
 <div class="col-lg-8 col-md-12 col-sm-12 cl-xs-12 image">
