--- a/Galaxy.html
+++ b/Galaxy.html
@@ -129,7 +129,7 @@
       <h2 class="title white-text text-center bottom_120">How would one fix the MIB’s user experience?</h2>
               <div class="row lightbox-gallery top_120">      
                 <div class="image col-lg-4 col-md-12 col-sm-12">
-                  <img class="bottom_30" src="img/works/Galaxy/ONE.svg" alt="Step One">
+                  <img class="bottom_30" src="img/works/Galaxy/ONE-1.svg" alt="Step One">
                   </div>
                   <div class="image col-lg-4 col-md-12 col-sm-12">
                     <img class="bottom_30" src="img/works/Galaxy/TWO.svg" alt="Step Two">
