--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -174,7 +174,7 @@
    
         <div class="row white-bg">
           <div class="col-lg-6">
-            <img class="image img-fluid right-round-corners" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
+            <img class="image img-fluid right-round-corners bottom_30" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
           </div>
 
         <div class="col-lg-6">
