--- a/USA-Today.html
+++ b/USA-Today.html
@@ -114,11 +114,11 @@
                     <!-- project-detail Two Columns | Start -->
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <h2 class="title bottom_30">A brand refresh</h2>
-                                <p>As part of USA Today's 2017 brand-refresh my team created a video graphics package to serve as a template for the newspaper's online content. As the team created these graphics we did an in-depth research and presented case studies of companies such as Vox, CNN, Vice, AJ+, my team had a great inspiration phase that led to the new branding for the online content of the brand.</p>
+                                <p>As part of USA Today's 2017 brand-refresh my team created a video graphics package to serve as a template for the newspaper's online content. As the team created these graphics we did an in-depth research and presented case studies of companies such as Vox, CNN, Vice, AJ+, my team had a great inspiration/research phase that led to valuable fidings.</p>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <h2 class="title bottom_30">Credits</h2>
                                 <p>Senior Art Director: Glenann Godden, 
                                     <br>Designer: Peter Verastegui, 
