color changes white and grey

--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -89,7 +89,7 @@
 <!-- ======= Full Screen Image / End ========== -->
 
 <!-- ================= Work Intro / Credits - Start ============================ -->
-<div data-midnight="white" class="lightgrey-bg">
+<div data-midnight="white">
 <section  data-midnight="white">
     <div class="container project-detail">
       <div class="row">
