--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -191,7 +191,7 @@
     </div>
   </section>
       
-      <section>
+      <section class="white-bg">
       <div class="col-lg-12 text-center">
       <a class="next-link" href="Library-of-Congress.html">
           <div class="nav-title">Next Work</div>
