--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -174,7 +174,7 @@
         <!-- ======= Full Screen Image  / End ========== -->
   <!--footer-->
 
-<section>
+<section class=" white-bg">
     <div class="col-lg-12 text-center">
             <a class="next-link" href="Racing-Extinction.html">
                 <div class="nav-title">Next Work</div>
