Portrait of an artist
Portraits in PNG

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, and; at times, words to express myself...</p>
           </div>
               <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                <img class="round-corners" src="img/Profile-Peter.png" alt="Portrait of Peter">
+                <img class="round-corners" src="img/Profile-Peter-3.png" alt="Portrait of Peter">
               </div>
 
           </div>
