log and links change
Text tracking -1px update, color of links, new logotype

--- a/Library-of-Congress.html
+++ b/Library-of-Congress.html
@@ -109,7 +109,7 @@
         <p>In this project I looked into the Library of Congress's website. My goal was to not only prototype a responsive website for the library, but to think of the limitations that were implemented, and necessary, in the original design. The basic navigation of the site was surprisingly coherent but among its negative aspects there was a lack of visual hierarchy. The website in general was functional yet not very intuitive when indicating where was the content coming from, and at times it was quite overwhelming.        </p>
       </div>
   </section>
-  <div class="project-detail lightbox-gallery dark-grey-bg">
+  <div data-midnight="white" class="project-detail lightbox-gallery dark-grey-bg">
       <div class="row no-gutter">
         <div class="col-lg-4 ">
             <div class="image top_45 bottom_45">
@@ -141,10 +141,10 @@
             </div>    
       </div>
   </section>
-  <div>
+  <div data-midnight="white">
       <img class="img-fluid" src="img/works/work-7/COLOR-PALETTE.png" alt="Social video styleguide">
   </div>
-  <section class="padding_90 lightgrey-bg">
+  <section data-midnight="white" class="padding_90 lightgrey-bg">
       <!-- Images -->
       <div class="row lightbox-gallery">
           <!-- a image -->
@@ -156,11 +156,11 @@
             <!-- a image -->
       </div>
     </section>
-    <div class="project-detail padding_60">
+    <div data-midnight="white" class="project-detail padding_60">
          <h3 class=" text subtitle text-center">Education</h3>
     </div>
 
-    <section class="padding_90 lightgrey-bg">
+    <section data-midnight="white" class="padding_90 lightgrey-bg">
         <!-- Images -->
         <div class="row lightbox-gallery">
             <!-- a image -->
@@ -173,11 +173,11 @@
         </div>
       </section>
 
-      <div class="project-detail padding_60">
+      <div data-midnight="white" class="project-detail padding_60">
           <h3 class=" text subtitle text-center">Visit</h3>
      </div>
  
-     <section class="padding_90 lightgrey-bg">
+     <section data-midnight="white" class="padding_90 lightgrey-bg">
          <!-- Images -->
          <div class="row lightbox-gallery">
              <!-- a image -->
