--- a/Galaxy.html
+++ b/Galaxy.html
@@ -124,7 +124,7 @@
 
 </div>  
   </section>
-  <section  class="galaxy-bg-purple-gradient">
+  <section data-midnight="dark" class="galaxy-bg-purple-gradient">
     <div class="container project-detail">
       <h2 class="title white-text text-center bottom_120">How would one fix the MIB’s user experience?</h2>
               <div class="row lightbox-gallery top_120">      
@@ -165,7 +165,7 @@
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
               </div>
               <h2 class="subtitle bottom_30">Agent J</h2>
-                <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
+                <p class="white-text">In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
                 <div class="image top_30">
                   <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
               </div>
@@ -175,7 +175,7 @@
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
               </div>
                 <h2 class="subtitle bottom_30">Supervisor</h2>
-                  <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If safety cost us some money so be it.</p>
+                  <p class="project-detail">My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If safety cost us some money so be it.</p>
                   <div class="image top_30">
                     <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
                 </div>
