--- a/index.html
+++ b/index.html
@@ -230,14 +230,19 @@
                   <h2 class="white-text subtitle bottom_30">Contact</h2>
               </div>
               <div class="col-lg-8  wow fadeInUp" data-wow-delay="0.6s">
-                <div class="bottom_15">
-                  <a href="https://www.pinterest.com/peterveras/"><i class="white-text fab fa-pinterest" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="white-text fab fa-behance" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="white-text fab fa-dribbble" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="white-text fab fa-instagram" aria-hidden="true"></i>  </a>
+                <ul style="list-style-type:none;">
+                <li class="bottom_30"><div>
+                  <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
               </div>
-                  <p>peter_veras@live.com</P>
-                  <p>+1 571 295 1415</p>
+            </li>
+
+                    <li class="bottom_30"> <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a></li>
+
+                    <li class="bottom_30"><a href="tel:+1571-295-1415">+1 571 295 1415</a></li>
+                  </ul>
               </div>
           </div>
       </div>
