--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -58,30 +58,27 @@
     </div>
   </div></div></header>
   
-  <!-- Navigation -->
-  <nav id="full-menu" class="fullmenu">
-      <div class="menu-container">
-          <div class="menu-holder">
-              <ul class="navmenu">
-                  <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
-                      <a href="index.html#home">HOME</a>
-                  </li>
-                  <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
-                      <a href="index.html#about">ABOUT</a>
-                  </li>
-                  <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
-                      <a href="index.html#portfolio">PORTFOLIO</a>
-                  </li>
-                  <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
-                      <a href="index.html#clients">CLIENTS</a>
-                  </li>
-                  <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
-                      <a href="index.html#contact">CONTACT</a>
-                  </li>
-              </ul>                 
-          </div>
+<!-- Navigation -->
+<nav id="full-menu" class="fullmenu">
+  <div class="menu-container"> 
+      <div class="menu-holder">
+          <ul class="navmenu">
+              <li class="scroll">
+                  <a href="#portfolio">Portfolio</a>
+              </li>
+              <li class="scroll">
+                      <a href="#about">About</a>
+              </li>
+              <li class="scroll">
+                  <a href="#clients">Clients</a>
+              </li>
+              <li class="scroll">
+                  <a href="#contact">Contact</a>
+              </li>
+          </ul>                 
       </div>
-  </nav>
+  </div>
+</nav>
   
   
   <!-- Up to top -->
