--- a/Galaxy.html
+++ b/Galaxy.html
@@ -51,27 +51,24 @@
 
 <!-- Navigation -->
 <nav id="full-menu" class="fullmenu">
-    <div class="menu-container">
-        <div class="menu-holder">
-            <ul class="navmenu">
-                <li class="scroll">
-                    <a href="index.html#home">HOME</a>
-                </li>
-                <li class="scroll">
-                    <a href="index.html#about">ABOUT</a>
-                </li>
-                <li class="scroll">
-                    <a href="index.html#portfolio">PORTFOLIO</a>
-                </li>
-                <li class="scroll">
-                    <a href="index.html#clients">CLIENTS</a>
-                </li>
-                <li class="scroll">
-                    <a href="index.html#contact">CONTACT</a>
-                </li>
-            </ul>                 
-        </div>
-    </div>
+  <div class="menu-container"> 
+      <div class="menu-holder">
+          <ul class="navmenu">
+              <li class="scroll">
+                  <a href="#portfolio">Portfolio</a>
+              </li>
+              <li class="scroll">
+                      <a href="#about">About</a>
+              </li>
+              <li class="scroll">
+                  <a href="#clients">Clients</a>
+              </li>
+              <li class="scroll">
+                  <a href="#contact">Contact</a>
+              </li>
+          </ul>                 
+      </div>
+  </div>
 </nav>
 
 
