--- a/index.html
+++ b/index.html
@@ -56,19 +56,16 @@
         <div class="menu-holder">
             <ul class="navmenu">
                 <li class="scroll">
-                    <a href="#portfolio">PORTFOLIO</a>
-                </li>
-                    <li class="scroll">
-                    <a href="#about">ABOUT</a>
+                    <a href="#portfolio">Portfolio</a>
                 </li>
                 <li class="scroll">
-                    <a href="#clients">CLIENTS</a>
+                        <a href="#about">About</a>
                 </li>
                 <li class="scroll">
-                    <a href="#contact">CONTACT</a>
+                    <a href="#clients">Clients</a>
                 </li>
-                    <li class="scroll">
-                    <a href="https://peterveras.github.io/photography/" target="_blank" rel="noopener noreferrer">PERSONAL WORK</a>
+                <li class="scroll">
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>                 
         </div>
@@ -169,15 +166,17 @@
           <div class="row lightbox-gallery">
             <div class="col-lg-4">
               <h2 class="white-text subtitle bottom_30">About</h2>
-              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, and; at times, words to express myself...</p>
+              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, words, that kind of stuff in my work. To learn more about me visit my &nbsp;<a href="https://peterverastegui.wordpress.com/">blog</a></li>&nbsp;<a href="https://peterverastegui.wordpress.com/"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>  </a></p>
           </div>
               <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                <img class="round-corners" src="img/Profile-Peter-3.png" alt="Portrait of Peter">
+                <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
               </div>
 
           </div>
       </div>
 </section>
+
+
 <!-- CLIENT SECTION
 ================================================== -->
 <section id="clients" data-midnight="dark" class="dark-bg">
