--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -51,23 +51,20 @@
 
 <!-- Navigation -->
 <nav id="full-menu" class="fullmenu">
-    <div class="menu-container">
+    <div class="menu-container"> 
         <div class="menu-holder">
             <ul class="navmenu">
                 <li class="scroll">
-                    <a href="index.html#home">HOME</a>
+                    <a href="#portfolio">Portfolio</a>
                 </li>
                 <li class="scroll">
-                    <a href="index.html#about">ABOUT</a>
+                        <a href="#about">About</a>
                 </li>
                 <li class="scroll">
-                    <a href="index.html#portfolio">PORTFOLIO</a>
+                    <a href="#clients">Clients</a>
                 </li>
                 <li class="scroll">
-                    <a href="index.html#clients">CLIENTS</a>
-                </li>
-                <li class="scroll">
-                    <a href="index.html#contact">CONTACT</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>                 
         </div>
