--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="row lightbox-gallery">
             <div class="col-lg-4">
               <h2 class="white-text subtitle bottom_30">About</h2>
-              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, words, that kind of stuff in my work. To learn more about me visit my &nbsp;<a href="https://peterverastegui.wordpress.com/">blog</a></li>&nbsp;<a href="https://peterverastegui.wordpress.com/"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>  </a></p>
+              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, words, that kind of stuff in my work. To learn more about me visit my <a href="https://peterverastegui.wordpress.com/">blog</a></li>&nbsp;<a href="https://peterverastegui.wordpress.com/"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>  </a></p>
           </div>
               <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
                 <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
