--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -61,21 +61,21 @@
         <div class="menu-holder">
             <ul class="navmenu">
                 <li class="scroll">
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li class="scroll">
-                        <a href="#about">About</a>
+                        <a href="index.html#about">About</a>
                 </li>
                 <li class="scroll">
-                    <a href="#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
                 <li class="scroll">
-                    <a href="#contact">Contact</a>
+                    <a href="index.html#contact">Contact</a>
                 </li>
             </ul>                 
         </div>
     </div>
-</nav>
+  </nav>
 
         <!-- Up to top -->
         <div class="uptotop">
