Links at the bottom

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="row lightbox-gallery">
             <div class="col-lg-4">
               <h2 class="white-text subtitle bottom_30">About</h2>
-              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, words, that kind of stuff in my work. To learn more about me visit my <a href="https://peterverastegui.wordpress.com/">blog</a></li>&nbsp;<a href="https://peterverastegui.wordpress.com/"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>  </a></p>
+              <p>I am an artist. Hence the goatee. Hope you understadn my work. I use images, typography, photos, colors, words, that kind of stuff in my work. To learn more about me visit my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a></li>&nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>  </a></p>
           </div>
               <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
                 <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
@@ -232,9 +232,9 @@
                 <ul style="list-style-type:none;">
                 <li class="bottom_30"><div>
                   <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
               </div>
             </li>
 
