--- a/Love-Letter.html
+++ b/Love-Letter.html
@@ -183,19 +183,17 @@
   <div class="container text-center">
     <div class="row">  
       <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
-          <div class="social top_15 bottom_45">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+          <div class="top_15 bottom_45">
+              <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
           </div>
         </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <p>Say hello at <a href="mailto:soonlabs@soonlabs.com">soonlabs@soonlabs.com</a></p>
-        <p class="copyright">2019 © Wender Template. Design by <a href="http://www.soonlabs.com">Soonlabs.</a></p>
+        <p class="copyright">© Edwin Peter Verastegui Guasace</p>
       </div>
     </div>
   </div>
