--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -3,7 +3,7 @@
 <html lang="en" class=" js no-touch cssanimations csstransitions"><head> 
   <title>Peter Verastegui | Portofolio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Wender Portfolio Template">
+  <meta name="description" content="Peter Verastegui's Portofolio">
   <meta name="keywords" content="personal, portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
