--- a/Image-version.html
+++ b/Image-version.html
@@ -3,7 +3,7 @@
 <head>  
 <title>Wender Portfolio Template</title>
 <meta charset="UTF-8">
-<meta name="description" content="Wender Portfolio Template">
+<meta name="description" content="Peter Verastegui's Portofolio">
 <meta name="keywords" content="personal, portfolio">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
