--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -4,7 +4,7 @@
 <head>
     <title>Peter Verastegui | Portfolio</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Wender Portfolio Template">
+    <meta name="description" content="Peter Verastegui's Portofolio">
     <meta name="keywords" content="personal, portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
