--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -102,7 +102,7 @@
 <!-- ================= Work Intro / Credits - Start ============================ -->
 <section  data-midnight="white" class="white-bg">
     <div class="container project-detail">
-      <div class="row">
+      <div class="row lightbox-gallery">
           <div class="col-lg-8">
             <h2 class="title bottom_30">Biodiversity Festival</h2>
               <p>For this project I was asked to design a variety of deliverables for the events taking place in this festival, I designed a full-page ad for the Express, lot of signs, some take-away items for the NatGeo booth, and; my favorite, the brand for the closing event, which gave me a chance to create some illustrations and an animation. The event was organized by the National Park Service and the National Geographic Society. The festival took palce in the National Mall.</p>
@@ -129,7 +129,7 @@
    <!--======= 2 Images - fullwidth with Padding ======= -->
 
 
-<div class="row white-bg">      
+<div data-midnight="white" class="row white-bg">      
   <div class="col-lg-6 bottom_30">
               <img class="image img-fluid float-left right-round-corners" src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
       </div>
@@ -150,7 +150,7 @@
   
       <section data-midnight="white" class="white-bg">
           <div class="container project-detail">
-              <div class="row">              
+              <div class="row lightbox-gallery">              
             <div class="col-lg-6">              
                 <h2 class="title">Bug, Bats, & Brews</h2>
                   <p class="">(Grown Ups enternainment at night)</p>
@@ -169,27 +169,32 @@
  
   <!--======= 3 Images - Without Padding ======= -->
    
-        <div class="row white-bg">
+        <div data-midnight="dark" class="row white-bg">
           <div class="col-lg-6">
-            <img class="image img-fluid right-round-corners bottom_30" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
+            <img class="image img-fluid right-round-corners bottom_30" 
+            src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Bats, Bugs, & Brews">
           </div>
 
         <div class="col-lg-6">
-            <img class="image img-fluid left-round-corners" src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
+            <img class="image img-fluid left-round-corners" 
+            src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
         </div>
         </div>
  
     <!-- ======= 3 Images - Without Padding ======= -->   
 
-   
-<div data-midnight="white" class="white-bg">
-  <section data-midnight="white">
-      <div class="container project-detail">
+    <section data-midnight="white" class="white-bg">
+  <div class="container project-detail">
+
+      <div class="row lightbox-gallery">
+      <div class="col-lg-12"> 
           <h2 class="title">Animation</h2>
           <p>The most fun I had on this project came at the time of animating the illustrations I created for the brand. I also had the opportunity to attend the event itself. I have great memories of this job. I extened spaceial thanks to Maya Moore for the photos of the evet which were cortesy of brightestyoungthings.com</p>
       </div>
-  </section>
-  </div>
+      </div>
+</div>
+    </section>
+
 <!--======= 3 Images - Without Padding ======= -->
 <div data-midnight="white" class="white-bg row lightbox-gallery">
 <div class="container">
