--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -86,10 +86,10 @@
 <!-- ======= Full Screen Image / End ========== -->
 
 <!-- ================= Work Intro / Credits - Start ============================ -->
-<div data-midnight="white">
-<section  data-midnight="white">
+
+<section  data-midnight="dark" class="black-bg">
     <div class="container project-detail">
-      <div class="row">
+      <div class="row lightbox-gallery white-text">
           <div class="col-lg-8">
             <h2 class="title bottom_30">Creating Change</h2>
               <p>Creating Change is a pro bono initiative from Discovery Communications. This Program harnesses the creative team, strategic thinking, and generous spirit of Discovery employees to help nonprofits with marketing, communications, and operational needs. The Program consists of a 12-hour marathon and conference at Discovery, then the following day it culminates with a  final project-presentation for the non profits participating.</p>
@@ -105,7 +105,7 @@
     </div>
   </div>
 </section>
-</div>
+
 <!-- ================= Work Intro / Credits - End ============================ -->
 <!-- ======= Full Screen Image  / Start ========== -->
 <div data-midnight="white">
@@ -116,18 +116,19 @@
 
     <!-- Images -->
     
-    <div data-midnight="white" class="row lightbox-gallery lightgrey-bg">
+ 
+    <div data-midnight="dark" class="row black-bg">
       <div class="col-lg-6">
-          <div class="image padding_30">
-            <img src="img/works/work-8/CLose-up-of-logo.png" alt="Stand">
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="image padding_30">
-            <img src="img/works/work-8/Crowd-in-front-of-speaker.png" alt="Stand">
-          </div>
-        </div>
-    </div>  
+        <img class="image img-fluid bottom_30 top_30" 
+        src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
+      </div>
+
+    <div class="col-lg-6">
+        <img class="image img-fluid bottom_30 top_30"  
+        src="img/works/work-8/Crowd-in-front-of-speaker.png" alt="Opening">
+    </div>
+    </div>
+
     <!--Images-->   
  
 
@@ -140,7 +141,7 @@
 
 
     <!--======= 3 Images - Without Padding ======= -->
-    <div data-midnight="white" class="row lightbox-gallery lightgrey-bg">
+    <div data-midnight="white" class="row lightbox-gallery black-bg">
         <div class="col-lg-4">
             <div class="image padding_30">
               <img src="img/works/work-8/Creating-Change-Hoodies.jpg" alt="Stand">
@@ -166,7 +167,7 @@
 <!-- ======= Full Screen Image / End ========== -->
 
 <!-- ======= 3 Images - Without Padding ======= Start-->    
-    <div data-midnight="dark" class="row lightbox-gallery padding_30 lightgrey-bg">
+    <div data-midnight="dark" class="row lightbox-gallery padding_30 black-bg">
       <div class="col-lg-4">
           <div class="image bottom_30">
             <img src="img/works/work-8/meeting-room.png" alt="Stand">
