--- a/Galaxy.html
+++ b/Galaxy.html
@@ -205,10 +205,10 @@
              <h2 class="text text-center title">Designing a request management system</h2>
       </div>
   </div>
-                                      <!-- Images -->
+     <!-- Images -->
                                       <div class="row lightbox-gallery">
                                         <!-- a image -->
-                                        <div class="col-lg-12">
+                                        <div class="col-lg-10 offset-lg-1">
                                             <div class="image bottom_60">
                                                 <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png" alt="New Request Low Fidelity">
                                             </div>
@@ -219,7 +219,7 @@
                                                                           <!-- Images -->
                                                                           <div class="row lightbox-gallery">
                                                                             <!-- a image -->
-                                                                            <div class="col-lg-12">
+                                                                            <div class="col-lg-10 offset-lg-1">
                                                                                 <div class="image bottom_60">
                                                                                     <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png" alt="Request Ledger">
                                                                                 </div>
@@ -350,14 +350,16 @@
   <h2 class="white-text title text-center bottom_120">Looking for a villain?</h2>
 </div>
                   <!-- Images -->
+                  <div class="container">
                   <div class="row lightbox-gallery">
                     <!-- a image -->
-                    <div class="col-lg-10 offset-lg-1">
+                    <div class="col-lg-12">
                         <div class="image top_60">
                             <img class="round-corners" src="img/works/Galaxy/Screens/Villain-profile.png" alt="Profile of a villain">
                         </div>
                     </div>
                 </div>
+              </div>
                 <!-- Images -->
 </section>
 
