--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -110,13 +110,13 @@
                       <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
                   </svg>
               </div>
-              <div class="hero-image" style="background-image: url(img/works/work-5/Gallo-Guapo-Cover.png);"></div>
+              <div class="hero-image" style="background-image: url(img/works/work-5/Foodtruck-Gallo-Guapo-Cover.png);"></div>
           </div>
           <!-- Hero Section - End
   ================================================== -->
   <!-- Work Content
   ================================================== -->
-  <section data-midnight="dark" class="padding_90 yellow">
+  <section data-midnight="white" class="padding_90 yellow">
     <!-- Images -->
     <div class="row lightbox-gallery">
         
@@ -198,7 +198,7 @@
       
       </section>
   
-      <footer data-midnight="dark">
+      <footer data-midnight="white">
         <div class="container text-center">
           <div class="row">  
             <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
