--- a/Library-of-Congress.html
+++ b/Library-of-Congress.html
@@ -101,9 +101,19 @@
 <!-- Work Content
 ================================================== -->
 <section  data-midnight="white" class="padding_90">
-      <div class="container project-detail text-center">
-        <h2 class="title bottom_30">Website Navigation</h2>
+      <div class="container project-detail">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-8 ">  
+       <h2 class="title bottom_30">Website Navigation</h2>
         <p>In this project I looked into the Library of Congress's website. My goal was to not only prototype a responsive website for the library, but to think of the limitations that were implemented, and necessary, in the original design. The basic navigation of the site was surprisingly coherent but among its negative aspects there was a lack of visual hierarchy. The website in general was functional yet not very intuitive when indicating where was the content coming from, and at times it was quite overwhelming.        </p>
+          </div>
+          <div class="col-lg-4 ">  
+            <h2 class="title bottom_30">Credits</h2>
+             <p>School: Corcoran College of Art + Design,
+              <br>Instructor: David Ramos, 
+              <br>Student: Peter Verastegui</p>
+               </div>
+        </div>
       </div>
   </section>
   <div data-midnight="white" class="project-detail lightbox-gallery dark-grey-bg">
@@ -127,7 +137,7 @@
     </div>
   <section  data-midnight="white" class="padding_90">
       <div class="container project-detail">
-        <div class="row">
+        <div class="row lightbox-gallery">
             <div class="col-lg-6">
               <h2 class="title bottom_30">Education</h2>
                 <p>In this section you'll find articles, lesson plans, and classroom material like videos and images. So a new "search" and "advance search bar is needed, also a better list that display the result of a search.</p>
