--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -103,9 +103,9 @@
 
 <!-- ==================== Work Decription and Credits | Start ============================= -->
 <section  data-midnight="white" class="padding_90 white">
-  <div class="container project-detail">
-      <div class="container">
-          <div class="row">
+
+      <div class="container project-detail">
+          <div class="row lightbox-gallery">
               <div class="col-lg-8">
                   <h2 class="title bottom_30">Storytelling Bootcamp</h2>
                   <p>For almost 130 years, the National Geographic Society has funded groundbreaking scientists and explorers and has helped them share their findings with the world. In an effort to provide their grantees with the knowledge, and skills, to continue sharing their work; the Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the National Geographic explorers how to better communicate their work with a broad audience, and I had the pleasure of designing the look of all the material used in these workshops.</p>
@@ -119,7 +119,7 @@
               </div>
           </div>
       </div>
-  </div> 
+  
   </section>
   <!-- ==================== Work Decription and Credits | End ============================= -->
  
