--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 <div class="container">    
       <div class="row">
         <div class="col-lg-8">           
-              <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+              <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                         <a href="Library-of-Congress.html">
                           <img class="round-corners bottom_45" src="img/works/work-7/LOC-Cover-IMG.png" alt="Library of Congress">
                         </a> 
               </div>
         </div>
         <div class="col-lg-4">
-              <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+              <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                         <a href="USA-Today.html">
                               <img class="round-corners bottom_45" src="img/works/work-1/work-1-Thumb-7.png" alt="USA Today Brand Refresh">
                         </a>
@@ -108,7 +108,7 @@
       <div class="row">
           
         <div class="col-lg-4">
-          <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
               <a href="Racing-Extinction.html">
                       <img class="round-corners bottom_45" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" alt="">
                   </a>
@@ -116,12 +116,12 @@
 
         </div>
         <div class="col-lg-4">
-          <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                       <a href="Gallo-Guapo.html">
                             <img class="round-corners bottom_45"src="img/works/work-5/Work-5-thumb-3.png" alt="">
                       </a>
         </div>
-        <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+        <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                       <a href="Storytelling-Bootcamp.html">
                               <img class="round-corners"src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
                       </a>
@@ -129,12 +129,12 @@
         </div>
           
         <div class="col-lg-4">
-              <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+              <div class="image  photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                             <a href="Galaxy.html">
                                   <img class="round-corners bottom_45" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
                             </a>
               </div>
-        <div class="image grid-item photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+        <div class="image  photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
             <figure class="js-tilt"> 
                             <a href="Biodiversity-Festival.html">
                                     <img class="round-corners bottom_45" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif" alt="Bat Flying Animation">
@@ -180,9 +180,8 @@
 <!-- CLIENT SECTION
 ================================================== -->
 <section id="clients" data-midnight="dark" class="dark-bg">
-  <div class="container project-detail">
-      <div class="container">
-          <div class="row">
+      <div class="container project-detail">
+          <div class="row lightbox-gallery">
             <div class="col-lg-4 col-md-4 col-sm-12">
               <h2 class="white-text subtitle">Past Patrons</h2>
           </div>
@@ -216,15 +215,13 @@
               </div>
           </div>
       </div>
-  </div>
 </section>
 
 <!-- CONTACT SECTION
 ================================================== -->
 <section id="contact" data-midnight="dark" class="dark-bg padding_90">
-  <div class="container project-detail">
-      <div class="container bottom_60">
-          <div class="row">
+  <div class="container project-detail bottom_60">
+          <div class="row lightbox-gallery">
               <div class="col-lg-4">
                   <h2 class="white-text subtitle bottom_30">Contact</h2>
               </div>
@@ -245,7 +242,6 @@
               </div>
           </div>
       </div>
-  </div>
 </section>
 
 
