--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -108,25 +108,25 @@
 
         <!-- Work Content
 ================================================== -->
-        <section data-midnight="white" class="padding_90">
-            <div class="container project-detail bottom_60">
-                <div class="container bottom_60">
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <h2 class="title bottom_30">Racing Extinction</h2>
-                            <p>In the film Racing Extinction, Oscar®-winner director Louie Psihoyos assembles a team of artists and activists with the intent of showing the world never-before-seen images that expose issues of endangered species and mass extinction. By the end of the film one can expect to walk out with the buzzing thought that we are the last generation with the chance to change the course of history; to make a change and drift away from extinction we have to start now, for the generations to come it would be too late to make a difference.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <h2 class="title bottom_30">Credits</h2>
-                            <p>Creative Director: Janet Daniel, 
-                                <br> Associate Creative Director: Beth Stewart, 
-                                <br> Photo Producer: Susan Wetherby, 
-                                <br> Copy Editor: Shaun Gholston, 
-                                <br> Designer: Peter Verastegui</p>
-                        </div>
-                    </div>
-                </div>
 
+    <div data-midnight="white" class="container  project-detail">
+    <div class="row lightbox-gallery">
+        <div class="col-lg-8">
+            <h2 class="title top_90">Racing Extinction</h2>
+            <p>In the film Racing Extinction, Oscar®-winner director Louie Psihoyos assembles a team of artists and activists with the intent of showing the world never-before-seen images that expose issues of endangered species and mass extinction. By the end of the film one can expect to walk out with the buzzing thought that we are the last generation with the chance to change the course of history; to make a change and drift away from extinction we have to start now, for the generations to come it would be too late to make a difference.</p>
+        </div>
+        <div class="col-lg-4">
+            <h2 class="title top_90">Credits</h2>
+            <p>Creative Director: Janet Daniel, 
+                <br> Associate Creative Director: Beth Stewart, 
+                <br> Photo Producer: Susan Wetherby, 
+                <br> Copy Editor: Shaun Gholston, 
+                <br> Designer: Peter Verastegui</p>
+        </div>
+    </div>
+</div>
+        <section data-midnight="dark">
+            <div class="container bottom_60">
                 <!-- Images -->
                 <div class="row lightbox-gallery">
                     <!-- a image -->
